# rust-mqtt-ingestor

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Production-Scaling-Guide.md  README.md  Security-Guidelines.md  alerts.json  check_out.txt  docker-compose.yml  emqx.conf  init-redpanda.sh  init.sql  prometheus.yml  redpanda_metrics.txt  vector.toml
emqx-config/: acl.conf  emqx.conf
grafana/dashboards/: backend_overview.json
k8s/apps/: backend.yaml  dashboard.yaml  metrics-monitors.yaml  redpanda-init.yaml  secrets.yaml  tempo.yaml  timescaledb.yaml  vector.yaml
k8s/helm-values/: emqx-values.yaml  monitoring-values.yaml  redpanda-values.yaml  timescaledb-values.yaml
k8s/scripts/: setup_local.sh  teardown.sh
k8s/scripts/bash/: setup_local.sh
k8s/scripts/powershell/: setup_local.ps1  teardown.ps1
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/adapters/: dlq.rs  mod.rs  mqtt.rs  stream_consumer.rs  timescale.rs
src/domain/: mod.rs
src/ports/: mod.rs
src/service/: mod.rs  processor.rs  worker_pool.rs
src/state/: config_manager.rs
